--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,8 +45,8 @@ dependencies:
   flutter_bloc: ^8.1.2
   cached_network_image: ^3.2.3
   pull_to_refresh: ^2.0.0
-  # path_provider: ^2.0.15
-  # hydrated_bloc: ^9.1.0
+  path_provider: ^2.0.15
+  hydrated_bloc: ^9.1.0
   
   
   
